WIP: fixing updating for conditionals and Delta events